# ComputationaIntelligence-PoliTO

./: Halloween.ipynb  README.md  log.md  log.txt  pyproject.toml  setCoverage.ipynb  setCoverageAStar.ipynb
Lab10/: lab10.ipynb  readme.md
Lab2/: lab2-nim.ipynb  readme.md
lab9/: lab9.ipynb  readme.md
quixo_exam/: game.py  main.py  minmax.py  monteCarloTreeSearch.py  qtable.py  readme.md  training.py  trainingQlearning.py  utils.py
