[tool.poetry]
name = "computational-intelligence"
version = "0.1.0"
description = ""
authors = ["RAFFAELE VIOLA s309063 <s309063@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<3.13"
jupyter = "^1.0.0"
numpy = "1.26.1"
tqdm = "^4.66.1"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
